tests/vertical-slice/accept/positive_record_remote_send.hew
// Accept: record-value messages are admitted by the RemotePid<T>::send
// Serializable gate.
record Ping {
    n: i64,
}

actor Worker {
    receive fn ping(msg: Ping) {}
}

impl ActorMsg for Worker {
    type Msg = Ping;
    type Reply = ();
}

fn send_remote(pid: RemotePid<Worker>) -> Result<(), SendError> {
    pid.send(Ping { n: 42 })
}
